<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountLoginModules.AccountGist">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lock_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/btn_star"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/set_personal"
        android:layout_width="275dp"
        android:layout_height="71dp"
        android:gravity="center_horizontal"
        android:text="@string/setperson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="129dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="77dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        app:srcCompat="@drawable/zyg_logo" />

    <TextView
        android:id="@+id/onceyou"
        android:layout_width="332dp"
        android:layout_height="63dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:gravity="center_horizontal"
        android:text="@string/onceyou"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="317dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help"
        tools:layout_editor_absoluteY="401dp" />

    <TextView
        android:id="@+id/committo"
        android:layout_width="234dp"
        android:layout_height="39dp"
        android:gravity="center_horizontal"
        android:text="@string/committo"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="448dp" />

    <TextView
        android:id="@+id/areyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/areyou"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="511dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="79dp"
        android:layout_height="40dp"
        android:layout_marginBottom="28dp"
        android:text="@string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="221dp" />

</android.support.constraint.ConstraintLayout>